iptables-jump-go
# Generated by iptables-save v1.6.1 on Tue Jun 19 21:40:07 2018
*mangle
:PREROUTING ACCEPT [10237:6038183]
:INPUT ACCEPT [10237:6038183]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8291:8034368]
:POSTROUTING ACCEPT [8291:8034368]
-A PREROUTING
-A POSTROUTING
COMMIT
# Completed on Tue Jun 19 21:40:07 2018
# Generated by iptables-save v1.6.1 on Tue Jun 19 21:40:07 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5:40188]
:T1 - [0:0]
:T2 - [0:0]
:T3 - [0:0]
:T4 - [0:0]
-A INPUT -p icmp -m icmp --icmp-type 5 -j DROP
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -g T1
-A INPUT -j ACCEPT
-A INPUT -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A T1 -j T2
-A T1 -j ACCEPT
-A T2 -g T3
-A T2 -j ACCEPT
-A T3 -g T4
-A T3 -j ACCEPT
-A T4 -j RETURN
COMMIT
# Completed on Tue Jun 19 21:40:07 2018
